force-app/main/default/objects/Booking_Online_Item__c/Booking_Online_Item__c.object-meta.xml
<CustomObject>
    <label>Booking Online Item</label>
    <nameField>
        <displayFormat>BOI-{0000000}</displayFormat>
        <label>Booking Online Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Online Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>