force-app/main/default/objects/Booking_Online_Item__c/fields/Booking_Online__c.field-meta.xml
<CustomField>
    <fullName>Booking_Online__c</fullName>
    <description>Mã Booking Online</description>
    <label>Booking Online</label>
    <referenceTo>Booking_Onilne__c</referenceTo>
    <relationshipLabel>Booking Online Item</relationshipLabel>
    <relationshipName>Booking_Online_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>