force-app/main/default/objects/Booking_Online_Item__c/fields/exid__c.field-meta.xml
<CustomField>
    <fullName>exid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Data Controller ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>