force-app/main/default/objects/Booking_Online_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Mã sản phẩm</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>