force-app/main/default/objects/Booking_Online_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Tên sản phẩm</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>