force-app/main/default/objects/Booking_Online_Item__c/fields/Promotion_code_ID__c.field-meta.xml
<CustomField>
    <fullName>Promotion_code_ID__c</fullName>
    <description>Promotion code được áp dụng</description>
    <label>Promotion code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>