force-app/main/default/objects/Booking_Online_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Số lượng</description>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>